--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -14,24 +14,29 @@ services:
       - "${VOLUME_ROOT_PATH}/zookeeper/data:/var/lib/zookeeper/data"
     networks:
         - kafka-local-network
-  kafka:
-    container_name: kafka-broker
+  kafka_broker_1:
+    container_name: kafka_broker_1
     image: confluentinc/cp-kafka:latest
-    depends_on:
-      - zookeeper
     ports:
       - "9092:9092"
+      - "19092:19092" 
+    deploy:
+      resources:
+        limits:
+          memory: 1G
     environment:
       KAFKA_BROCKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INNER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka_broker_1:19092,EXTERNAL://127.0.0.1:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     volumes:
       - "${VOLUME_ROOT_PATH}/kafka/data:/var/lib/data"
+    depends_on:
+      - zookeeper
     networks:
       - kafka-local-network
-
+ 
 networks:
   kafka-local-network:
