--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -32,7 +32,30 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     volumes:
-      - "${VOLUME_ROOT_PATH}/kafka/data:/var/lib/data"
+      - "${VOLUME_ROOT_PATH}/kafka_1/data:/var/lib/data"
+    depends_on:
+      - zookeeper
+    networks:
+      - kafka-local-network
+  kafka_broker_2:
+    container_name: kafka_broker_2
+    image: confluentinc/cp-kafka:latest
+    ports:
+      - "9093:9093"
+      - "29092:29092" 
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+    environment:
+      KAFKA_BROCKER_ID: 2
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka_broker_2:29092,EXTERNAL://127.0.0.1:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    volumes:
+      - "${VOLUME_ROOT_PATH}/kafka_2/data:/var/lib/data"
     depends_on:
       - zookeeper
     networks:
